# MCP-AI-Chatbot

./: .gitignore  README.md
MCP-chatbot-frontend/: package-lock.json  package.json
MCP-chatbot-frontend/src/: App.tsx  index.css
MCP-chatbot-frontend/src/components/: Chatbot.tsx
MCP-chatbot-frontend/src/services/: chatApi.ts
MCP-server-backend/: chatbot_server.py  pyproject.toml
